fix: remove extra padding in poster in single title page

--- a/assets/sass/_title_meta.scss
+++ b/assets/sass/_title_meta.scss
@@ -24,9 +24,13 @@
 				}
 			}
 
+			.card-body {
+				padding: 6px;
+			}
+
 			.titlemeta-poster-notice {
 				padding: 0;
-				padding-top: 10px;
+				padding-top: 6px;
 				font-size: 12px;
 				color: $grey-color-darker;
 			}
